fix: 核心通用模块和边缘客户端采用JDK8特性